Made list block into box sizing border box to fix background overflow issue.

--- a/_sass/components/_list-block.scss
+++ b/_sass/components/_list-block.scss
@@ -1,4 +1,5 @@
 .list-block {
+  box-sizing: border-box;
   padding: 2rem 1rem;
   background-color: $grey-background-color;
   height: inherit;
